# Prova-intermedia-di-programmazione

./: .gitignore  CMakeLists.txt  README.md
cmake-configuration-folder/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: book.h  date.h  isbn.h
src/: book.cpp  date.cpp  isbn.cpp  main.cpp
src/book/: book.cpp  book.h
